--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need permission to access photo gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need permission to access camera</string>
+	<!-- <key>NSMicrophoneUsageDescription</key>
+	<string>We need permission to access microphone</string> -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
