--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.6.7+1
   path_provider: ^1.6.10
   path: ^1.6.4 #change this later
+  sqflite: ^1.3.1
 
 #   great_places_app] flutter pub get
 # Running "flutter pub get" in great_places_app...                
