--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,10 @@
 	<string>We need permission to access camera</string>
 	<!-- <key>NSMicrophoneUsageDescription</key>
 	<string>We need permission to access microphone</string> -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need permission to access location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need permission to always use location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
