--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^1.6.10
   path: ^1.6.4 #change this later
   sqflite: ^1.3.1
+  location: ^3.0.2
 
 #   great_places_app] flutter pub get
 # Running "flutter pub get" in great_places_app...                
