--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,11 @@ dependencies:
   provider: ^4.1.3
   image_picker: ^0.6.7+1
   path_provider: ^1.6.10
-  path: ^1.6.4 #change this later
+  path: ^1.6.4  
   sqflite: ^1.3.1
   location: ^3.0.2
+  google_maps_flutter: ^0.5.28+1
+  mapbox_gl: ^0.7.0
 
 #   great_places_app] flutter pub get
 # Running "flutter pub get" in great_places_app...                
