--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   location: ^3.0.2
   google_maps_flutter: ^0.5.28+1
   mapbox_gl: ^0.7.0
+  flutter_map: ^0.9.0
 
 #   great_places_app] flutter pub get
 # Running "flutter pub get" in great_places_app...                
